tests/fixtures/sample-js-project-positive/shared/utils/src/errors/uncaught-7e9ef091.ts
export function failing_7e9ef091(): never {
  throw new Error("ouch-7e9ef091");
}
